# MorphoNet

./: .gitignore  LICENSE  Mu2D.ipynb  README.md  details.yml  gpus.py  investigating_borders.ipynb  investigating_ranges.ipynb  linters.sh  output_visualisation.ipynb  pyproject.toml  requirements.txt  run.sh  structures.py  tests.sh  vis.ipynb
analysis/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  binary_selems.py  investigating_borders.ipynb  investigating_ranges.ipynb  output_visualisation.ipynb  structures.py  test_utils.py  utils.py  visualization.ipynb
lmorph/: install.sh  setup.py
lmorph/lmorph/: __init__.py  _lmorph.py
lmorph/test/: test_lmorph.py
scripts/: command.sh  download_command.sh  launch.sh  run.sh  run_all.sh  run_all_binary.sh  run_all_noise.sh  run_dall.sh  run_diskorect.sh  run_diskorect_all.sh  run_dlmorph.sh  run_double.sh  run_dpconv.sh  run_dsmorph.sh  run_noisti.sh  run_slmorph.sh  run_ssmorph.sh  upload_command.sh
smorph/: .gitignore  setup.py
smorph/smorph/: __init__.py  _smorph.py
smorph/test/: test_smorph.py
src/: command.sh  requirements.txt  test.py  tests.ipynb  train.py
src/datasets/: __init__.py  base.py  diskorect.py  fmnist.py  gwtoh.py  mnist.py  noisti.py  sidd.py  utils.py
src/losses/: __init__.py  base.py  losses.py
src/misc/: context.py  losses.py  parser.py  utils.py  visualizer.py
src/models/: __init__.py  base.py  convnet.py  lmorphnet.py  pconvnet.py  smorphnet.py  utils.py
src/old_models/: convnet_classif.py  convnet_double.py  lmorphnet_double.py  lmorphnet_four.py  pconvnet_double.py  pconvnet_four.py  smorphnet_classif.py  smorphnet_double.py  smorphnet_five.py  smorphnet_four.py
src/operations/: __init__.py  array_morphology.py  base.py  classification.py  morphology.py  noise.py
src/tasks/: __init__.py  train.py
tests/datasets/: test_base.py
tests/losses/: test_base.py
tests/misc/: test_utils.py
tests/models/: test_base.py  test_lmorphnet.py  test_pconvnet.py  test_smorphnet.py
tests/operations/: test_base.py  test_morphology.py  test_noise.py
training/: command.sh  requirements.txt  script.sh  train.py
training/models/: convnet.py  convnet_classif.py  (+12 more)
(+94 files in other folders)
